handle utf8 errors better in js, try to convert to js error SERVER-1063 SERVER-1056